--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,22 +139,13 @@ jobs:
     working_directory: *working_directory
     executor: base
     steps:
+      - checkout_and_restore_dependencies
+      
       - run: |
-          sudo apt-get install jq
+          cd packages/api
+          export MY_MESSAGE=$(echo -e 'Build succeeded and deployed at https://aqualink-app-'"${CIRCLE_PULL_REQUEST##*/}"'.surge.sh \n(hash `'"${CIRCLE_SHA1:0:7}"'` deployed at '"$( date '+%Y/%m/%d %H:%M:%S' )"')')
+          yarn github-pr-comment -m "$MY_MESSAGE"
 
-          pr_response=$(curl --location --request GET "https://api.github.com/repos/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pulls?head=$CIRCLE_PROJECT_USERNAME:$CIRCLE_BRANCH&state=open" \
-          -u $GH_USER:$GH_TOKEN)
-
-          if [ $(echo $pr_response | jq length) -eq 0 ]; then
-            echo "No PR found to update"
-          else
-            pr_comment_url=$(echo $pr_response | jq -r ".[]._links.comments.href")
-          fi
-
-          curl --location --request POST "$pr_comment_url" \
-          -u $GH_USER:$GH_TOKEN \
-          --header 'Content-Type: application/json' \
-          --data-raw '{ "body": "Build succeeded and deployed at https://aqualink-app-'"${CIRCLE_PULL_REQUEST##*/}"'.surge.sh \n (hash `'"${CIRCLE_SHA1:0:7}"'` deployed at '"$( date '+%Y/%m/%d %H:%M:%S' )"')" }'
 
 workflows:
   version: 2.1
