--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "mutationobserver-shim": "^0.3.7",
+    "notistack": "^1.0.10",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
