--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -49,7 +49,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
-    "react-ga": "^3.1.2",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.41.5",
     "react-leaflet": "^2.7.0",
     "react-leaflet-markercluster": "^2.0.0",
