--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -41,7 +41,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node $(yarn bin typeorm)",
+    "typeorm": "ts-node $(yarn bin typeorm) -d ormconfig.ts",
     "migration:generate": "yarn typeorm migration:generate",
     "migration:run": "yarn typeorm migration:run -t each",
     "migration:revert": "yarn typeorm migration:revert",
@@ -69,13 +69,13 @@
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
     "@googlemaps/google-maps-services-js": "^3.1.6",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/common": "^9.3.9",
+    "@nestjs/core": "^9.3.9",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.3.9",
     "@nestjs/schedule": "^0.4.1",
-    "@nestjs/swagger": "^4.8.0",
-    "@nestjs/typeorm": "^7.0.0",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@turf/turf": "^6.5.0",
     "@types/bluebird": "^3.5.32",
     "@types/node-xlsx": "^0.15.3",
@@ -86,7 +86,6 @@
     "class-validator": "^0.14.0",
     "csv-parse": "^4.15.1",
     "express": "^4.17.1",
-    "fastify-swagger": "^4.7.0",
     "firebase-admin": "^9.0.0",
     "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
@@ -104,17 +103,16 @@
     "pg": "^8.2.1",
     "pg-native": "^3.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.4",
+    "rxjs": "^7",
     "sharp": "^0.30.6",
-    "swagger-ui-express": "^4.1.6",
     "ts-exif-parser": "^0.2.1",
-    "typeorm": "^0.2.41",
+    "typeorm": "^0.3.14",
     "typeorm-naming-strategies": "^1.1.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/cli": "^9.3.9",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.3.9",
     "@types/express": "^4.17.13",
     "@types/faker": "^4.1.12",
     "@types/jest": "24.9.0",
